# bonkbot

./: .gitignore  Cargo.toml  default.nix  flake.nix  readme.md  result
src/: bonk_emojis.txt  emojis.rs  main.rs
