[package]
name = "bonkbot"
version = "2.1.0"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
rand = "0.8.5"
reqwest = "0.11.12"
clap = { version = "4.0.20", features = ["derive"] }
tokio = {version = "1.21", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.serenity]
default-features=false
features=["client", "gateway", "rustls_backend", "model", "cache", "unstable_discord_api"]
version = "0.11.5"

[features]
